--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -1,5 +1,8 @@
-html {
-  //font-family: 'Roboto Slab';
+body {
+  background-color: #000;
+  background-image: url("../images/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
 }
 
 
@@ -10,5 +13,11 @@ html {
     &:hover {
       color: $HoverColor;
     }
+  }
+  p {
+    font-family: sans-serif;
+    line-height: 25px;
+    color: $PrimaryColor;
+    opacity: 0.8;
   }
 }
