--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -17,7 +17,7 @@ body {
   p {
     font-family: sans-serif;
     line-height: 25px;
-    color: $PrimaryColor;
+    color: greenyellow;
     opacity: 0.8;
   }
 }
