--- a/src/index.pug
+++ b/src/index.pug
@@ -3,11 +3,6 @@ doctype html
 html(lang='en')
     include assets/pug/_head
     body
-        .wrapper
-            h1 Webpack Template v.2
-            p
-                | Студия Web-Boss всегда готова решить любую задачу.
-                | Консультация с широким активом позволяет
-                | выполнять важные задания по разработке систем массового участия.
-            +image("angular")
+       #app
+
 
